tests/failing/cosmin.tail
let v1:S(int,200) = 200 in
let v2:S(int,300) = 300 in
let v3:<int>2 = [200,300] in
let v4:<int>2 = [300,200] in
let v5:[int]2 = reshape{[int],[1,2]}(v3,iota(muli(v1,v2))) in
let v6:[int]2 = transp{[int],[2]}(v5) in
let v10:[int]2 = zipWith{[int,int,int],[2]}(addi,v6,each{[int,int],[2]}(fn v7:[int]0 => muli(10,v7),reshape{[int],[1,2]}(v4,iotaV(v1)))) in
let v13:[int]1 = reduce{[int],[1]}(addi,0,reshape{[int],[2,2]}(v4,v10)) in
let v16:[int]0 = reduce{[int],[0]}(addi,0,v13) in
i2d(v16)
